product card fixed

--- a/home.html
+++ b/home.html
@@ -1,72 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BagItUp | Home</title>
-    <link rel="stylesheet" href="home.css">
-</head>
+    <link rel="stylesheet" href="home.css" />
+  </head>
 
-<body>
+  <body>
     <div class="hero-container">
-        <nav class="top-nav">
-            <div class="nav-left">
-                <a href="menswear/mens-shirts.html" class="nav-link">SHIRTS</a>
-                <a href="menswear/mens-tshirts.html" class="nav-link">T-SHIRTS</a>
-                <a href="menswear/jackets.html" class="nav-link">JACKETS</a>
-                <a href="menswear/mens-jeans.html" class="nav-link">BOTTOMS</a>
-            </div>
-
-            <div class="brand-logo">
-                <h1>BAGITUP</h1>
-            </div>
-
-            <div class="nav-right">
-                <a href="/Users/arpittripathi/Desktop/Projects/CAPSTONE/footwear/footwear.html"
-                    class="nav-link">FOOTWEAR</a>
-                <a href="coming-soon.html" class="nav-link">ACCESSORIES</a>
-                <a href="login.html" class="sign-in-button">SIGN IN / UP</a>
-                <a href="addtocart.html" class="cart-button">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path
-                            d="M16 16C14.89 16 14 16.89 14 18C14 19.11 14.89 20 16 20C17.11 20 18 19.11 18 18C18 16.89 17.11 16 16 16ZM0 0V2H2L5.6 9.59L4.25 12.04C4.09 12.32 4 12.65 4 13C4 14.11 4.89 15 6 15H18V13H6.42C6.28 13 6.17 12.89 6.17 12.75L6.2 12.63L7.1 11H14.55C15.3 11 15.96 10.59 16.3 9.97L19.88 3.48C19.96 3.34 20 3.17 20 3C20 2.45 19.55 2 19 2H4.21L3.27 0H0ZM6 16C4.89 16 4 16.89 4 18C4 19.11 4.89 20 6 20C7.11 20 8 19.11 8 18C8 16.89 7.11 16 6 16Z"
-                            fill="currentColor" />
-                    </svg>
-                </a>
-            </div>
-        </nav>
-
-        <div class="hero-content">
-            <div class="testimonial-section">
-                <div class="testimonial-avatars">
-                    <img src="images/avatar1.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
-                    <img src="images/avatar2.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
-                    <img src="images/avatar3.jpg" alt="Customer" class="avatar" onerror="this.style.display='none'">
-                </div>
-                <p class="testimonial-text">Stay cozy without compromising your range of motion. Our sustainable fashion
-                    range is perfect for those eco-conscious wardrobes.</p>
-            </div>
-
-            <div class="hero-center">
-                <h2 class="hero-title">GEAR UP EVERY SEASON<br>EVERY WARDROBE!</h2>
-                <div class="hero-buttons">
-                    <a href="menswear/mens-tshirts.html" class="btn btn-primary">SHOP NOW</a>
-                    <a href="new-arrivals.html" class="btn btn-secondary">EXPLORE ALL</a>
-                </div>
-                <img src="images/subject-removebg-preview (1).png" alt="Model" class="hero-model-image">
-            </div>
-
-            <div class="video-section">
-                <div class="video-placeholder" onclick="window.location.href='coming-soon.html'">
-                    <div class="play-button">▶</div>
-                </div>
-            </div>
+      <nav class="top-nav">
+        <div class="nav-left">
+          <a href="menswear/mens-shirts.html" class="nav-link">SHIRTS</a>
+          <a href="menswear/mens-tshirts.html" class="nav-link">T-SHIRTS</a>
+          <a href="menswear/jackets.html" class="nav-link">JACKETS</a>
+          <a href="menswear/mens-jeans.html" class="nav-link">BOTTOMS</a>
         </div>
+
+        <div class="brand-logo">
+          <h1>BAGITUP</h1>
+        </div>
+
+        <div class="nav-right">
+          <a href="menswear/footwear.html" class="nav-link">FOOTWEAR</a>
+          <a href="menswear/accessories.html" class="nav-link">ACCESSORIES</a>
+          <a href="login.html" class="sign-in-button">SIGN IN / UP</a>
+          <a href="addtocart.html" class="cart-button">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path
+                d="M16 16C14.89 16 14 16.89 14 18C14 19.11 14.89 20 16 20C17.11 20 18 19.11 18 18C18 16.89 17.11 16 16 16ZM0 0V2H2L5.6 9.59L4.25 12.04C4.09 12.32 4 12.65 4 13C4 14.11 4.89 15 6 15H18V13H6.42C6.28 13 6.17 12.89 6.17 12.75L6.2 12.63L7.1 11H14.55C15.3 11 15.96 10.59 16.3 9.97L19.88 3.48C19.96 3.34 20 3.17 20 3C20 2.45 19.55 2 19 2H4.21L3.27 0H0ZM6 16C4.89 16 4 16.89 4 18C4 19.11 4.89 20 6 20C7.11 20 8 19.11 8 18C8 16.89 7.11 16 6 16Z"
+                fill="currentColor" />
+            </svg>
+          </a>
+        </div>
+      </nav>
+
+      <div class="hero-content">
+        <div class="testimonial-section">
+          <div class="testimonial-avatars">
+            <img
+              src="images/avatar1.jpg"
+              alt="Customer"
+              class="avatar"
+              onerror="this.style.display='none'" />
+            <img
+              src="images/avatar2.jpg"
+              alt="Customer"
+              class="avatar"
+              onerror="this.style.display='none'" />
+            <img
+              src="images/avatar3.jpg"
+              alt="Customer"
+              class="avatar"
+              onerror="this.style.display='none'" />
+          </div>
+          <p class="testimonial-text">
+            Stay cozy without compromising your range of motion. Our sustainable
+            fashion range is perfect for those eco-conscious wardrobes.
+          </p>
+        </div>
+
+        <div class="hero-center">
+          <h2 class="hero-title">GEAR UP EVERY SEASON<br />EVERY WARDROBE!</h2>
+          <div class="hero-buttons">
+            <a href="menswear/mens-tshirts.html" class="btn btn-primary"
+              >SHOP NOW</a
+            >
+            <a href="new-arrivals.html" class="btn btn-secondary"
+              >EXPLORE ALL</a
+            >
+          </div>
+          <img
+            src="images/subject-removebg-preview (1).png"
+            alt="Model"
+            class="hero-model-image" />
+        </div>
+
+        <div class="video-section">
+          <div
+            class="video-placeholder"
+            onclick="window.location.href='coming-soon.html'">
+            <div class="play-button">▶</div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script defer src="home.js"></script>
     <script defer src="image-rotator.js"></script>
-</body>
-
+  </body>
 </html>
