--- a/menswear/accessories.html
+++ b/menswear/accessories.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accessories | BagItUp</title>
     <link rel="stylesheet" href="accessories.css">
-    <script defer src="products.js"></script>
+    <script defer src="../products.js"></script>
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+                        alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search accessories...">
-                <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="login.html" class="sign-in-btn">Sign In</a>
+                <a href="../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -34,12 +35,13 @@
         <div class="products-container">
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory1.png" alt="Leather Belt">
+                    <div class="product-image">
+                        <img src="../images/products/accessory1.png" alt="Leather Belt">
                     </div>
                     <h3 class="product-name">Leather Belt</h3>
                     <div class="product-price">₹899</div>
-                    <p class="product-description">Premium leather belt with classic buckle. Essential for any wardrobe.</p>
+                    <p class="product-description">Premium leather belt with classic buckle. Essential for any
+                        wardrobe.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -47,8 +49,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory2.png" alt="Sunglasses">
+                    <div class="product-image">
+                        <img src="../images/products/accessory2.png" alt="Sunglasses">
                     </div>
                     <h3 class="product-name">Sunglasses</h3>
                     <div class="product-price">₹1,299</div>
@@ -60,12 +62,13 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory3.png" alt="Wallet">
+                    <div class="product-image">
+                        <img src="../images/products/accessory3.png" alt="Wallet">
                     </div>
                     <h3 class="product-name">Leather Wallet</h3>
                     <div class="product-price">₹1,499</div>
-                    <p class="product-description">Genuine leather wallet with multiple card slots. Compact and functional.</p>
+                    <p class="product-description">Genuine leather wallet with multiple card slots. Compact and
+                        functional.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -73,12 +76,13 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory4.png" alt="Watch">
+                    <div class="product-image">
+                        <img src="../images/products/accessory4.png" alt="Watch">
                     </div>
                     <h3 class="product-name">Analog Watch</h3>
                     <div class="product-price">₹2,999</div>
-                    <p class="product-description">Classic analog watch with stainless steel strap. Timeless elegance.</p>
+                    <p class="product-description">Classic analog watch with stainless steel strap. Timeless
+                        elegance.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -86,8 +90,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory5.png" alt="Cap">
+                    <div class="product-image">
+                        <img src="../images/products/accessory5.png" alt="Cap">
                     </div>
                     <h3 class="product-name">Baseball Cap</h3>
                     <div class="product-price">₹699</div>
@@ -99,12 +103,13 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-accessory">
-                        <img src="images/products/accessory6.png" alt="Backpack">
+                    <div class="product-image">
+                        <img src="../images/products/accessory6.png" alt="Backpack">
                     </div>
                     <h3 class="product-name">Canvas Backpack</h3>
                     <div class="product-price">₹1,999</div>
-                    <p class="product-description">Durable canvas backpack with multiple compartments. Perfect for daily use.</p>
+                    <p class="product-description">Durable canvas backpack with multiple compartments. Perfect for
+                        daily use.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -114,7 +119,7 @@
         </div>
     </div>
 
-    <a href="home.html" class="back-home">← Back to Home</a>
+    <a href="../home.html" class="back-home">← Back to Home</a>
 </body>
 
 </html>
