--- a/menswear/footwear.html
+++ b/menswear/footwear.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footwear | BagItUp</title>
     <link rel="stylesheet" href="footwear.css">
-    <script defer src="products.js"></script>
+    <script defer src="../products.js"></script>
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" /></a></div>
+            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+                        alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search footwear...">
-                <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="login.html" class="sign-in-btn">Sign In</a>
+                <a href="../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -34,12 +35,13 @@
         <div class="products-container">
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear1.png" alt="Sneakers">
+                    <div class="product-image">
+                        <img src="../images/products/footwear1.png" alt="Sneakers">
                     </div>
                     <h3 class="product-name">Classic Sneakers</h3>
                     <div class="product-price">₹2,499</div>
-                    <p class="product-description">Comfortable sneakers for everyday wear. Perfect blend of style and comfort.</p>
+                    <p class="product-description">Comfortable sneakers for everyday wear. Perfect blend of style and
+                        comfort.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -47,12 +49,13 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear2.png" alt="Formal Shoes">
+                    <div class="product-image">
+                        <img src="../images/products/footwear2.png" alt="Formal Shoes">
                     </div>
                     <h3 class="product-name">Formal Shoes</h3>
                     <div class="product-price">₹2,999</div>
-                    <p class="product-description">Elegant formal shoes for business meetings. Professional and polished.</p>
+                    <p class="product-description">Elegant formal shoes for business meetings. Professional and
+                        polished.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -60,8 +63,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear3.png" alt="Loafers">
+                    <div class="product-image">
+                        <img src="../images/products/footwear3.png" alt="Loafers">
                     </div>
                     <h3 class="product-name">Loafers</h3>
                     <div class="product-price">₹2,299</div>
@@ -73,8 +76,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear4.png" alt="Boots">
+                    <div class="product-image">
+                        <img src="../images/products/footwear4.png" alt="Boots">
                     </div>
                     <h3 class="product-name">Leather Boots</h3>
                     <div class="product-price">₹3,499</div>
@@ -86,8 +89,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear5.png" alt="Running Shoes">
+                    <div class="product-image">
+                        <img src="../images/products/footwear5.png" alt="Running Shoes">
                     </div>
                     <h3 class="product-name">Running Shoes</h3>
                     <div class="product-price">₹2,799</div>
@@ -99,8 +102,8 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-footwear">
-                        <img src="images/products/footwear6.png" alt="Sandals">
+                    <div class="product-image">
+                        <img src="../images/products/footwear6.png" alt="Sandals">
                     </div>
                     <h3 class="product-name">Casual Sandals</h3>
                     <div class="product-price">₹1,299</div>
@@ -114,7 +117,7 @@
         </div>
     </div>
 
-    <a href="home.html" class="back-home">← Back to Home</a>
+    <a href="../home.html" class="back-home">← Back to Home</a>
 </body>
 
 </html>
