--- a/menswear/jackets.html
+++ b/menswear/jackets.html
@@ -36,7 +36,7 @@
         <div class="products-container">
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket1.png" alt="Denim Jacket">
                     </div>
                     <h3 class="product-name">Denim Jacket</h3>
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket2.png" alt="Bomber Jacket">
                     </div>
                     <h3 class="product-name">Bomber Jacket</h3>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket3.png" alt="Leather Jacket">
                     </div>
                     <h3 class="product-name">Leather Jacket</h3>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket4.png" alt="Windbreaker">
                     </div>
                     <h3 class="product-name">Windbreaker</h3>
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket5.png" alt="Parka Jacket">
                     </div>
                     <h3 class="product-name">Parka Jacket</h3>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jacket">
+                    <div class="product-image">
                         <img src="../images/products/jacket6.png" alt="Blazer">
                     </div>
                     <h3 class="product-name">Blazer</h3>
