--- a/menswear/mens-jeans.html
+++ b/menswear/mens-jeans.html
@@ -35,7 +35,7 @@
         <div class="products-container">
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans1.png" alt="Slim Fit Jeans">
                     </div>
                     <h3 class="product-name">Slim Fit Jeans</h3>
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans2.png" alt="Regular Fit Jeans">
                     </div>
                     <h3 class="product-name">Regular Fit Jeans</h3>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans3.png" alt="Skinny Jeans">
                     </div>
                     <h3 class="product-name">Skinny Jeans</h3>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans4.png" alt="Relaxed Fit Jeans">
                     </div>
                     <h3 class="product-name">Relaxed Fit Jeans</h3>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans5.png" alt="Bootcut Jeans">
                     </div>
                     <h3 class="product-name">Bootcut Jeans</h3>
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image-jeans">
+                    <div class="product-image">
                         <img src="../images/products/jeans6.png" alt="Distressed Jeans">
                     </div>
                     <h3 class="product-name">Distressed Jeans</h3>
