added contact us page

--- a/home.html
+++ b/home.html
@@ -77,14 +77,53 @@
         </div>
 
         <div class="video-section">
-          <div
-            class="video-placeholder"
-            onclick="window.location.href='coming-soon.html'">
-            <div class="play-button">▶</div>
-          </div>
+          <video class="video-player" autoplay loop muted playsinline>
+            <source src="images/capstonevideo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </div>
+
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3 class="footer-title">BAGITUP</h3>
+          <p class="footer-description">Gear up every season, every wardrobe with sustainable fashion.</p>
+        </div>
+
+        <div class="footer-section">
+          <h4 class="footer-heading">Quick Links</h4>
+          <ul class="footer-links">
+            <li><a href="menswear/mens-tshirts.html">Shop</a></li>
+            <li><a href="new-arrivals.html">New Arrivals</a></li>
+            <li><a href="login.html">My Account</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4 class="footer-heading">Help & Support</h4>
+          <ul class="footer-links">
+            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="contact-us.html">Support Center</a></li>
+            <li><a href="coming-soon.html">Shipping Info</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4 class="footer-heading">Legal</h4>
+          <ul class="footer-links">
+            <li><a href="terms-of-service.html">Terms of Service</a></li>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="coming-soon.html">Return Policy</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 BagItUp. All rights reserved.</p>
+      </div>
+    </footer>
 
     <script defer src="home.js"></script>
     <script defer src="image-rotator.js"></script>
