--- a/login.html
+++ b/login.html
@@ -11,7 +11,10 @@
 <body>
     <div class="login-container">
         <div class="login-box">
-            <h1 class="logo"><img src="images/newlogo-removebg-preview (2).png" alt="Logo" />BagItUp</h1>
+            <div class="logo">
+                <img src="images/newlogo-removebg-preview (2).png" alt="Logo" class="logo-img" />
+                <h1 class="brand">BagItUp</h1>
+            </div>
             <h2>Welcome Back</h2>
             <p class="subtitle">Log in to continue shopping in style.</p>
 
